[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.29.3",
    "intel-extension-for-pytorch==2.6.10+xpu",
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "lap>=0.5.12",
    "matplotlib>=3.10.1",
    "minio>=7.2.15",
    "oneccl-bind-pt==2.6.0+xpu",
    "openvino>=2025.0.0",
    "pillow>=11.0.0",
    "safetensors>=0.5.3",
    "setuptools>=76.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.91",
]

[[tool.uv.index]]
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"

